Fixed pagination styling on firefox.

--- a/public/stylesheets/playlist.css
+++ b/public/stylesheets/playlist.css
@@ -34,6 +34,7 @@ a {
 }
 #player_wrapper {
 	float: left;
+	height: 0;
 }
 #player_fixed {
 	position: relative;
@@ -167,6 +168,8 @@ ul li .track_detail {
 .pagination a, .pagination span, .pagination em {
 	display:inline;
 	margin-right:5px;
+	-moz-border-radius: 4px 4px 4px 4px;
+	-moz-box-shadow: 0 1px 2px #CCCCCC, 0 1px 1px white inset;
 	-webkit-box-shadow:#CCCCCC 0 1px 2px, white 0 1px 1px inset;
 	background-color:#F9F8F9;
 	background-image:-webkit-linear-gradient(top, #F9F8F9, #EDE8ED);
